[tool.poetry]
name = "geolocate"
version = "0.1.0"
description = "Georeferencing large amounts of data for free."
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
p-tqdm = "^1.3.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
